2001-12-15 Alexander Rawass <alexannika@users.sourceforge.net>

	* added commonly used modules:
	  - faction_ships.c
	  - launch.c
	  - random.c
	  - vec3.c
	* added mission total_war1, launch_and_launch1

	
2001-12-15 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added _std.isNull function to test for null objects
	* added callback 'launch' to launch new ships from script
	
	
2001-12-14 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* a joystick axis can now have an 'inverse' attribute
	* more fixes for parseCalike problem
	
	
2001-12-13 Alexander Rawass <alexannika@users.sourceforge.net>

	* fix for Patrick's parseCalike problem?

	
2001-12-13 Alexander Rawass <alexannika@users.sourceforge.net>

	* added strings to c_alike.yacc
	* added string callbacks src/cmd/script/script_call_string.cpp
	* made Unit remember the Flightgroup & nr
	* testd_unit1.mission now prints out also the fg id
	

2001-12-12 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added file src/cmd/script/script_call_unit.cpp


2001-12-12 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added file src/cmd/script/script_call_olist.cpp
	* improved olist code
	* added variable 'startgame' to section 'interpreter' in
	  vegastrike.config
	
	
2001-12-11 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter runs now while the game goes on
	* added callback 'getGameTime'

	
2001-12-11 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter can use c_alike module files

2001-12-10 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* imported vegastrike/src/cmd/script/c_alike
	* modified Makefile.am's and configure.in

2001-12-07 Alexander Rawass <alexannika@users.sourceforge.net>

	* digital hatswitch code can be turned off/on with
	  debug_digital_hatswitch in section joystick


2001-12-06 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter:
	  - datatype object
	  - callback 'olist' implements list
	
