@@ -1,3 +1,10 @@
+2001-12-16 Alexander Rawass <alexannika@users.sourceforge.net>
+	
+	* added src/cmd/script/msgcenter.{cpp,h}
+	* modified src/cmd/script/Makefile.am
+	* added callbacks _io.message, _io.printMsgList
+	
+
 2001-12-15 Alexander Rawass <alexannika@users.sourceforge.net>
 
 	* added commonly used modules:
